WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75324
getComputedStyle for border-color is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=75324
Summary
getComputedStyle for border-color is not implemented.
Alexis Menard (darktears)
Reported
2011-12-28 12:55:52 PST
getComputedStyle for border-color is not implemented.
Attachments
Patch
(21.50 KB, patch)
2011-12-28 12:57 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2011-12-28 12:57:10 PST
Created
attachment 120693
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-28 13:26:52 PST
Comment on
attachment 120693
[details]
Patch Clearing flags on attachment: 120693 Committed
r103780
: <
http://trac.webkit.org/changeset/103780
>
WebKit Review Bot
Comment 3
2011-12-28 13:26:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug