getComputedStyle for border-color is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75324

Reviewed by Andreas Kling.

Source/WebCore:

Implement getComputedStyle for border-color.

Test: fast/css/getComputedStyle/getComputedStyle-border-color-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add test to cover that we return correct values.

* fast/css/getComputedStyle/getComputedStyle-border-color-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-border-color-shorthand.html: Added.


Canonical link: https://commits.webkit.org/92081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103780 268f45cc-cd09-0410-ab3c-d52691b4dbfc